syntax = "proto3";

package go.micro.service.fileservice;

service FileService {
	rpc CreateFile(File) returns (Response) {}
	rpc ReadFile(File) returns (Response) {}
}

message Chunk {
	string sha2 = 1;
	uint32 ref_count = 2;
}

message File {
	string id = 1;
	string name = 2;
	int64 size = 3;
	uint32 maxChunkSize = 4;
	uint32 chunksStoresCount = 5;
}

message Response {
	File file = 1;
}